03-airgap-zone/manifests/network-policies/15-allow-metrics-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metrics-server
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: metrics-server
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 4443
  egress:
    - ports:
        - protocol: TCP
          port: 10250
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
